--- a/fdevsec.yaml
+++ b/fdevsec.yaml
@@ -1,21 +1,5 @@
 version: v1
 
 id:
-  org: XXX-XXX-XXX-XX
-  app: XXX-XXX-XXX-XX
-  
-scanners:
-  - sast
-  #- dast
-  - secret
-  - sca
-  - iac
-  - container   
-    
-dast:
-#  url: http://xxx.xxx.xx/
-#  fortipentest_scanner: false #true|false
-  full_scan: true #true|false
-
-fail_pipeline:
-  risk_rating: 8
+  org: 70cd2612-9d85-4c7f-a11f-95c8ec340f25
+  app: 73afecaf-bb2b-4a16-922f-19eebf8249ae
