--- a/fdevsec.yaml
+++ b/fdevsec.yaml
@@ -11,6 +11,6 @@ scanners:
  - iac 
  - container
 dast: 
- url: http://http://aa3891b5f1c134e30954e65ca0d647fc-448475463.us-east-2.elb.amazonaws.com/:8081
+ url: http://aa3891b5f1c134e30954e65ca0d647fc-448475463.us-east-2.elb.amazonaws.com/:8081
  fortipentest_scanner: false #true|false 
  full_scan: true #true|false
