--- a/alb-deployment.yml
+++ b/alb-deployment.yml
@@ -10,6 +10,8 @@ spec:
     spec:
       containers:
       - name: dvwaalb
+        securityContext: 
+           allowPrivilegeEscalation: false
         image: public.ecr.aws/f9n2h3p5/dvwaalb:<TAG>
         imagePullPolicy: "Always"
   selector:
