--- a/deployment.yml
+++ b/deployment.yml
@@ -11,9 +11,9 @@ spec:
       containers:
       - name: dvwa
         securityContext: 
-           allowPrivilegeEscalation: false
-        image: public.ecr.aws/f9n2h3p5/dvwapub:<TAG>
         imagePullPolicy: "Always"
+        securityContext: 
+           allowPrivilegeEscalation: false
   selector:
     matchLabels:
       app: dvwa
